@@ -27,22 +27,35 @@ dependencies {
     implementation(libs.bundles.koin)
     implementation(libs.kotlinx.serialization.json)
     implementation(libs.kotlinx.coroutines.core)
+    implementation(libs.kotlinx.datetime)
     implementation(libs.hikari)
     implementation(libs.postgresql)
     implementation(libs.logback)
+    implementation(libs.logstash.logback.encoder)
+    implementation(libs.ktor.server.metrics.micrometer)
+    implementation(libs.micrometer.registry.prometheus)
     implementation(platform(libs.aws.bom))
     implementation(libs.aws.s3)
 
     testImplementation(libs.ktor.server.test.host)
+    testImplementation(libs.h2)
     testImplementation(kotlin("test-junit5"))
     testImplementation(libs.mockk)
-    testImplementation(libs.testcontainers.postgresql)
     testImplementation(libs.koin.test)
     testImplementation(libs.kotlinx.coroutines.test)
 }
 
+tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
+    compilerOptions {
+        freeCompilerArgs.addAll(
+            "-opt-in=kotlin.uuid.ExperimentalUuidApi",
+        )
+    }
+}
+
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 }
 
 ktor {
